Swap from LinkedList to ArrayList in many places.